Add store services admin feature with endpoint acceable for publisher tool :sparkle:
